--- a/examples/index.html
+++ b/examples/index.html
@@ -13,6 +13,7 @@
     <script src="https://unpkg.com/@ungap/url-search-params"></script>
     <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.2.1/dist/chart.umd.min.js"></script>
+    <script src="https://www.gstatic.com/charts/loader.js"></script>
     <link rel="icon" type="image/png" href="favicon.ico">
 </head>
 <body>
@@ -351,6 +352,9 @@
                         <canvas id="metricsChart" style="width:100%"; height="400px"></canvas>
                     </div>
                 </div>
+            </div>
+            <div class="row">
+                <div id="timeline-chart" style="width:100%;height:585px"></div>
             </div>
             <h3 id="live-stats-header">Live Stats (from Master)</h3>
             <div class="card bg-light mb-3">
