--- a/examples/index.html
+++ b/examples/index.html
@@ -178,11 +178,11 @@
                 </div>
             </div>
 
-            <h4>Amazon KVS WebRTC Datachannel Benchmarking</h4>
+            <h4>Amazon KVS WebRTC Profiling Timeline chart</h4>
             <div class="form-group">
                 <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="checkbox" id="enableDatachannelBenchmarking" value="enableDatachannelBenchmarking">
-                    <label for="enableDatachannelBenchmarking" class="form-check-label">Enable KVS WebRTC Datachannel Benchmarking <small>(Master + Viewer)</small></label>
+                    <input class="form-check-input" type="checkbox" id="enableProfileTimeline" value="enableProfileTimeline">
+                    <label for="enableProfileTimeline" class="form-check-label">Enable C SDK master and JS viewer profile timeline<small>(Master + Viewer)</small></label>
                     <span data-delay="{ &quot;hide&quot;: 1500 }" data-position="auto" tabindex="0" class="text-info ml-1" data-toggle="tooltip" data-html="true" title="
                     <p>Enables the test and metrics for the Amazon KVS WebRTC by sending the master-side metrics to the viewer via datachannel and display a timeline chart.</p>
                     <a href=&quot;https://github.com/awslabs/amazon-kinesis-video-streams-webrtc-sdk-js/tree/develop?tab=readme-ov-file#metrics&quot;>Additional information</a>
@@ -371,10 +371,10 @@
                     <div id="webrtc-live-stats"></div>
                 </div>
             </div>
-            <div id="datachannel-benchmarking" class="d-none" style="padding-top:20px;">
+            <div id="timeline-profiling" class="d-none" style="padding-top:20px;">
                 <div class="row">
                     <div class="col">
-                        <h4 id="datachannel-benchmarking-header"></h4>
+                        <h4 id="timeline-profiling-header"></h4>
                         <div id="timeline-chart" style="width:100%;height:0px">
                         </div>
                     </div>
