--- a/examples/index.html
+++ b/examples/index.html
@@ -13,6 +13,7 @@
     <script src="https://unpkg.com/@ungap/url-search-params"></script>
     <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.2.1/dist/chart.umd.min.js"></script>
+    <script src="https://www.gstatic.com/charts/loader.js"></script>
     <link rel="icon" type="image/png" href="favicon.ico">
 </head>
 <body>
@@ -173,6 +174,18 @@
                     <span data-delay="{ &quot;hide&quot;: 1500 }" data-position="auto" tabindex="0" class="text-info ml-1" data-toggle="tooltip" data-html="true" title="
                     <p>Enables the test and metrics for the Amazon KVS WebRTC Device Qualification Program.</p>
                     <a href=&quot;https://aws.amazon.com/partners/programs/dqp/&quot;>Additional information</a>
+                "><sup>&#9432;</sup></span>
+                </div>
+            </div>
+
+            <h4>Amazon KVS WebRTC Profiling Timeline chart</h4>
+            <div class="form-group">
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="checkbox" id="enableProfileTimeline" value="enableProfileTimeline">
+                    <label for="enableProfileTimeline" class="form-check-label">Enable C SDK master and JS viewer profile timeline<small>(Master + Viewer)</small></label>
+                    <span data-delay="{ &quot;hide&quot;: 1500 }" data-position="auto" tabindex="0" class="text-info ml-1" data-toggle="tooltip" data-html="true" title="
+                    <p>Enables the test and metrics for the Amazon KVS WebRTC by sending the master-side metrics to the viewer via datachannel and display a timeline chart.</p>
+                    <a href=&quot;https://github.com/awslabs/amazon-kinesis-video-streams-webrtc-sdk-js/tree/develop?tab=readme-ov-file#metrics&quot;>Additional information</a>
                 "><sup>&#9432;</sup></span>
                 </div>
             </div>
@@ -338,23 +351,34 @@
             </div>
         </div>
 
-        <div id="dqpmetrics" class="d-none">
-            <h3 id="dqpmetrics-header">DQP Test Metrics (from Master)</h3>
-            <div class="row">
-                <div class="col">
-                    <div class="card bg-light mb-3">
-                        <div id="dqp-test"></div>
+        <div>
+            <div id="dqpmetrics" class="d-none">
+                <h3 id="dqpmetrics-header">DQP Test Metrics (from Master)</h3>
+                <div class="row">
+                    <div class="col">
+                        <div class="card bg-light mb-3">
+                            <div id="dqp-test"></div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card bg-light mb-3">
+                            <canvas id="metricsChart" style="width:100%"; height="400px"></canvas>
+                        </div>
                     </div>
                 </div>
-                <div class="col">
-                    <div class="card bg-light mb-3">
-                        <canvas id="metricsChart" style="width:100%"; height="400px"></canvas>
-                    </div>
+                <h3 id="live-stats-header">Live Stats (from Master)</h3>
+                <div class="card bg-light mb-3">
+                    <div id="webrtc-live-stats"></div>
                 </div>
             </div>
-            <h3 id="live-stats-header">Live Stats (from Master)</h3>
-            <div class="card bg-light mb-3">
-                <div id="webrtc-live-stats"></div>
+            <div id="timeline-profiling" class="d-none" style="padding-top:20px;">
+                <div class="row">
+                    <div class="col">
+                        <h4 id="timeline-profiling-header"></h4>
+                        <div id="timeline-chart" style="width:100%;height:0px">
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
