--- a/examples/index.html
+++ b/examples/index.html
@@ -410,6 +410,7 @@
 <div id="test"></div>
 
 <script src="../kvs-webrtc.js"></script>
+<script src="./channelHelper.js"></script>
 <script src="./master.js"></script>
 <script src="./viewer.js"></script>
 <script src="./createSignalingChannel.js"></script>
