--- a/examples/index.html
+++ b/examples/index.html
@@ -25,16 +25,12 @@
     <div class="row loader"></div>
     <div id="main" class="d-none">
         <form id="form" onsubmit="return false">
-            <h4>KVS Endpoint</h4>
+            <h4>AWS Region</h4>
             <div class="form-group has-validation" style="position: relative;">
-                <label for="region">Region</label>
+                <label for="region">Region your signaling channel is located</label>
                 <input type="text" class="form-control valid" id="region" placeholder="Region" value="us-west-2" autocomplete="off" required>
                 <datalist id="regionList"></datalist>
                 <div id="region-invalid-feedback" class="invalid-feedback"></div>
-            </div>
-            <div class="form-group">
-                <label for="endpoint">Endpoint <small>(optional)</small></label>
-                <input type="text" class="form-control" id="endpoint" placeholder="Endpoint">
             </div>
             <h4>AWS Credentials</h4>
             <div class="form-group">
@@ -192,7 +188,7 @@
 
             <details><summary class="h4">Advanced</summary>
                 <p><small>Filter settings for which ICE candidates are sent to and received from the peer.</small></p>
-                <div class="container">
+                <div class="container mb-3">
                     <div class="row">
                         <div class="col-sm">
                             <div class="form-check form-check">
@@ -247,6 +243,11 @@
                             </div>
                         </div>
                     </div>
+                </div>
+
+                <div class="form-group">
+                    <label for="endpoint"><small>Endpoint override (optional)</small></label>
+                    <input type="text" class="form-control" id="endpoint" placeholder="Endpoint">
                 </div>
             </details>
 
