--- a/examples/index.html
+++ b/examples/index.html
@@ -379,6 +379,7 @@
             <div style="margin-top: 30px;">
                 <button id="master-button" type="submit" class="btn btn-primary">Start Master</button>
                 <button id="viewer-button" type="submit" class="btn btn-primary">Start Viewer</button>
+                <button id="repeat-button" type="submit" class="btn btn-warning">Repeat 450 times</button>
             </div>
         </form>
 
